--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="AddNewUser">New User</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
