--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,8 @@
                         <li><a asp-area="" asp-controller="Home" asp-action="AddNewUser">New User</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                         <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                        <li><a asp-area="" asp-controller="Home" asp-action="TriggerError">Error</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="TriggerError">SimpleException</a></li>
+                        <li><a asp-area="" asp-controller="Home" asp-action="FailingOutGoingHttpCall">FailingOutgoingHttpCall</a></li>
                     </ul>
                 </div>
             </div>
