Fix code style and adapt naming conventions

--- a/sample/SampleAspNetCoreApp/Views/Home/AddNewUser.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Home/AddNewUser.cshtml
@@ -4,10 +4,10 @@
 @{
 }
 
-@model String
+@model string
 
 <form method="POST">
-    <label for="firstName">Name</label>
-    <input type="text" id="enteredName" placeholder="New username goes here" />
-    <input type="submit" />
+	<label for="firstName">Name</label>
+	<input type="text" id="enteredName" placeholder="New username goes here"/>
+	<input type="submit"/>
 </form>
