--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
 					<a asp-area="" asp-controller="Home" asp-action="AddNewUser">New User</a>
 				</li>
 				<li>
+					<a asp-area="" asp-controller="Home" asp-action="AddNewUser">SimplePage</a>
+				</li>
+				<li>
 					<a asp-area="" asp-controller="Home" asp-action="TriggerError">SimpleException</a>
 				</li>
 				<li>
