Add csv sample to SampleAspNetCoreApp #49

--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -37,7 +37,10 @@
 					<a asp-area="" asp-controller="Home" asp-action="AddNewUser">New User</a>
 				</li>
 				<li>
-					<a asp-area="" asp-controller="Home" asp-action="AddNewUser">SimplePage</a>
+					<a asp-area="" asp-controller="Home" asp-action="SimplePage">SimplePage</a>
+				</li>
+				<li>
+					<a asp-area="" asp-controller="Home" asp-action="ChartPage">ChartPage</a>
 				</li>
 				<li>
 					<a asp-area="" asp-controller="Home" asp-action="TriggerError">SimpleException</a>
