Add distributed tracing sample

--- a/sample/SampleAspNetCoreApp/Views/Home/SimplePage.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Home/SimplePage.cshtml
@@ -1,4 +1,5 @@
 <br/>
 <div class="alert alert-info" role="alert">
-	This is a very simple page without any code inside the controller. <br/> If the APM .NET Agent is activated then the request is captured by the agent and you can see it in Kibana.
+	This is a very simple page with very minimal code inside the controller: all it does is that it sets the header 'X-Additional-Header' to 'For-Elastic-Apm-Agent'. <br/> 
+	If the APM .NET Agent is activated then the request is captured by the agent and you can see it in Kibana including the captured header.
 </div>
