--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -48,6 +48,9 @@
 				<li>
 					<a asp-area="" asp-controller="Home" asp-action="FailingOutGoingHttpCall">FailingOutgoingHttpCall</a>
 				</li>
+				<li>
+					<a asp-area="" asp-controller="Home" asp-action="DistributedTracingMiniSample">DistributedTracingMiniSample</a>
+				</li>
 			</ul>
 		</div>
 	</div>
