--- a/sample/SampleAspNetCoreApp/Views/Home/DistributedTracingMiniSample.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Home/DistributedTracingMiniSample.cshtml
@@ -1,15 +1,16 @@
 @model List<string>
 
+<br/>
 <div class="alert alert-info" role="alert">
-	This sample demonstrates distributed tracing support. The app creates an HTTP GET request to "TODO URL". In case the WebApiSample listen on that URL
-	you see some values from the Web API sample below. In this case the agent will create a trace and in Kibana you will be able to see that the two apps are connected.
+	This sample demonstrates distributed tracing support. The app creates an HTTP GET request to localhost:5050. In case the WebApiSample
+	listen on that URL you see some values from the Web API sample below. In this case the agent will create a trace and in Kibana you
+	will be able to see that the two apps are connected.
 </div>
-
 
 <div>
 	Data from the WebApiSample service:
-	
-	@if(ViewData["Fail"] == null)
+
+	@if (ViewData["Fail"] == null)
 	{
 		<ul>
 			@{
@@ -22,6 +23,7 @@
 	}
 	else
 	{
-		@ViewData["Fail"];
+		@ViewData["Fail"]
+		;
 	}
 </div>
