--- a/sample/SampleAspNetCoreApp/Views/Home/Index.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Home/Index.cshtml
@@ -26,5 +26,5 @@
 
 @if (Model == null || Model.Count == 0)
 {
-	<p>The user table in the database is empty, you can add a new row under "New User"</p>
+	<p>The sample table in the database is empty, you can add a new row under "InsertDb Sample"</p>
 }
