--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
 					<a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 				</li>
 				<li>
-					<a asp-area="" asp-controller="Home" asp-action="AddNewUser">New User</a>
+					<a asp-area="" asp-controller="Home" asp-action="AddSampleData">InsertDb Sample</a>
 				</li>
 				<li>
 					<a asp-area="" asp-controller="Home" asp-action="SimplePage">SimplePage</a>
@@ -46,9 +46,11 @@
 					<a asp-area="" asp-controller="Home" asp-action="TriggerError">SimpleException</a>
 				</li>
 				<li>
-					<a asp-area="" asp-controller="Home" asp-action="FailingOutGoingHttpCall">FailingOutgoingHttpCall</a>
+					<a asp-area="" asp-controller="Home" asp-action="FailingOutGoingHttpCall">FailingOutgoingHttp</a>
 				</li>
 			</ul>
+			
+			<partial name="_LoginPartial" />
 		</div>
 	</div>
 </nav>
