Add test to capture users in ASP.NET Core

--- a/sample/SampleAspNetCoreApp/Views/Shared/_LoginPartial.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_LoginPartial.cshtml
@@ -5,21 +5,25 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
-        <ul class="nav navbar-nav navbar-right">
-            <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hi @UserManager.GetUserName(User)!</a>
-            </li>
-            <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Logout</button>
-            </li>
-        </ul>
-    </form>
+	<ul class="nav navbar-nav navbar-right">
+		<li>
+			<a>Hi @UserManager.GetUserName(User)!</a>
+		</li>
+		<li>
+
+			<a asp-area="" asp-controller="Account" asp-action="LogOut">Logout</a>
+
+		</li>
+	</ul>
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Register">Register</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Login">Login</a></li>
-    </ul>
+	<ul class="nav navbar-nav navbar-right">
+		<li>
+			<a asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+		</li>
+		<li>
+			<a asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+		</li>
+	</ul>
 }
