--- a/sample/SampleAspNetCoreApp/Views/Account/Register.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Account/Register.cshtml
@@ -1,7 +1,7 @@
 <br/>
 <br/>
 
-<form asp-antiforgery="false" method="POST" asp-controller="Account" asp-action="RegisterUser">
+<form method="POST" asp-controller="Account" asp-action="RegisterUser">
 	<label>Name</label>
 	<input type="text" id="username" name="username" placeholder="username"/>
 	<input type="text" id="password" name="password" placeholder="password"/>
