dropping bootstrap and all the UI related things from the sample app.

--- a/sample/SmartSqlAspNetCodeApp/Views/Home/Index.cshtml
+++ b/sample/SmartSqlAspNetCodeApp/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "SmartSql";
+	Layout = null;
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://github.com/dotnetcore/SmartSql">SmartSql</a>.</p>
+    <p>This is a sample of Elatic Apm For <a href="https://github.com/dotnetcore/SmartSql">SmartSql</a>.</p>
 </div>
