Revert rename of SampleAspNetCoreApp

--- a/sample/SampleAspNetCoreApp/Views/Home/ChartPage.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Home/ChartPage.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<AspNetCoreSampleApp.Models.HistoricalValue>
+@model IEnumerable<SampleAspNetCoreApp.Models.HistoricalValue>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 
