--- a/sample/SampleAspNetCoreApp/Views/Shared/Error.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetCoreSampleApp.Models.ErrorViewModel
+﻿@model SampleAspNetCoreApp.Models.ErrorViewModel
 @{
 	ViewData["Title"] = "Error";
 }
