--- a/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
+++ b/sample/SampleAspNetCoreApp/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<title>@ViewData["Title"] - AspNetCoreSampleApp</title>
+	<title>@ViewData["Title"] - SampleAspNetCoreApp</title>
 
 	<environment include="Development">
 		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
@@ -26,7 +26,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">AspNetCoreSampleApp</a>
+			<a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SampleAspNetCoreApp</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
@@ -64,7 +64,7 @@
 	@RenderBody()
 	<hr/>
 	<footer>
-		<p>&copy; 2018 - AspNetCoreSampleApp</p>
+		<p>&copy; 2018 - SampleAspNetCoreApp</p>
 	</footer>
 </div>
 
