--- a/sample/AspNetFullFrameworkSampleApp/Views/Home/Index.cshtml
+++ b/sample/AspNetFullFrameworkSampleApp/Views/Home/Index.cshtml
@@ -3,10 +3,10 @@
 }
 
 <div class="jumbotron">
-	<h1>ASP.NET</h1>
-	<p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+	<h1 class="display-4">ASP.NET Full Framework example</h1>
+	<p class="lead">Welcome to the Elastic APM agent ASP.NET Full Framework example</p>
 	<p>
-		<a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
+		<a href="https://www.elastic.co/guide/en/apm/agent/dotnet/current/index.html" class="btn btn-primary btn-lg" target="_blank">Learn more &raquo;</a>
 	</p>
 </div>
 
