--- a/sample/AspNetFullFrameworkSampleApp/Views/Account/Login.cshtml
+++ b/sample/AspNetFullFrameworkSampleApp/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Log in";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <div class="row">
     <div class="col-md-12">
         <section>
