Fix RoutedWebforms routing

--- a/sample/AspNetFullFrameworkSampleApp/Views/Diagnostics/Index.cshtml
+++ b/sample/AspNetFullFrameworkSampleApp/Views/Diagnostics/Index.cshtml
@@ -1,7 +1,8 @@
-﻿@using System.Diagnostics
-@model DiagnosticsViewModel
-
-<title>Diagnostics</title>
+﻿@model DiagnosticsViewModel
+@{
+	ViewBag.Title = "Diagnostics";
+}
+<title>@ViewBag.Title</title>
 
 <h1>Current process ID</h1>
 
